[package]
name = "s2-tilejson"
version = "1.5.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Backwards compatible JSON format for describing s2 map tilesets."
documentation = "https://docs.rs/s2-tilejson"
homepage = "https://github.com/OpenS2/s2-tilejson"
repository = "https://github.com/OpenS2/s2-tilejson"
readme = "README.md"
categories = ["no-std", "algorithms"]
keywords = ["s2-tilejson", "earcut", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
exclude = [
    "/assets",
    "/benchmarks",
    "/coverage",
    "/dist",
    "/docs",
    "/test",
    "/tools",
    "/src",
    ".github",
    ".helix",
    "bin/dummy.rs",
]

[[bin]]
name = "dummy"
path = "bin/dummy.rs"

[lib]
name = "s2_tilejson"
path = "rust/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2json = "1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]

[profile.bench]
opt-level = "z"
